Fix blue text colouring on mobile

--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -1182,6 +1182,7 @@ ul.filter {
     padding-right: $spacing-2;
     width: 100%;
     line-height: 1.4;
+    color: black;
 
     &:hover {
       animation-name: jump;
